src/bnfc output/parse.output
Terminals which are not used

   _ERROR_


State 37 conflicts: 1 shift/reduce
State 40 conflicts: 32 shift/reduce
State 144 conflicts: 2 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ListBlock

    2 Block: ListFunction
    3      | ListStatement

    4 Function: _IDENT_ _SYMB_0 ListParameter _SYMB_1 _SYMB_2 ListBlock _SYMB_3

    5 Parameter: _IDENT_

    6 ListBlock: /* empty */
    7          | ListBlock Block

    8 ListFunction: Function
    9             | Function ListFunction

   10 ListStatement: Statement
   11              | Statement ListStatement

   12 ListParameter: Parameter
   13              | Parameter _SYMB_4 ListParameter

   14 Statement: Expression _SYMB_5
   15          | _SYMB_2 ListStatement _SYMB_3
   16          | _SYMB_58 Expression _SYMB_5
   17          | _SYMB_53 _SYMB_0 Expression _SYMB_1 _SYMB_2 ListStatement _SYMB_3
   18          | _SYMB_53 _SYMB_0 Expression _SYMB_1 _SYMB_2 ListStatement _SYMB_3 _SYMB_50 _SYMB_2 ListStatement _SYMB_3
   19          | _SYMB_63 _SYMB_0 Expression _SYMB_1 _SYMB_2 ListStatement _SYMB_3
   20          | _SYMB_62 _SYMB_0 Expression _SYMB_1 _SYMB_2 ListStatement _SYMB_3
   21          | _SYMB_52 _SYMB_0 ListExpression _SYMB_5 Expression _SYMB_5 ListExpression _SYMB_1 _SYMB_2 ListStatement _SYMB_3
   22          | _SYMB_47 _SYMB_5
   23          | _SYMB_48 _SYMB_5

   24 Expression11: _DOUBLE_
   25             | _INTEGER_
   26             | _IDENT_
   27             | _SYMB_56
   28             | _SYMB_0 Expression _SYMB_1

   29 Expression10: _IDENT_ _SYMB_0 _SYMB_1
   30             | _IDENT_ _SYMB_0 ListExpression _SYMB_1
   31             | _IDENT_ _SYMB_6
   32             | _IDENT_ _SYMB_7
   33             | _SYMB_42 _SYMB_0 Expression _SYMB_1
   34             | _SYMB_57 _SYMB_0 Expression _SYMB_4 Expression _SYMB_1
   35             | _SYMB_60 _SYMB_0 Expression _SYMB_1
   36             | _SYMB_51 _SYMB_0 Expression _SYMB_1
   37             | _SYMB_54 _SYMB_0 Expression _SYMB_1
   38             | _SYMB_55 _SYMB_0 Expression _SYMB_1
   39             | _SYMB_59 _SYMB_0 Expression _SYMB_1
   40             | _SYMB_49 _SYMB_0 Expression _SYMB_1
   41             | _SYMB_61 _SYMB_0 Expression _SYMB_1
   42             | _SYMB_45 _SYMB_0 Expression _SYMB_1
   43             | _SYMB_46 _SYMB_0 Expression _SYMB_4 Expression _SYMB_1
   44             | _SYMB_44 _SYMB_0 Expression _SYMB_1
   45             | _SYMB_43 _SYMB_0 Expression _SYMB_1
   46             | Expression11

   47 Expression9: _SYMB_8 Expression10
   48            | _SYMB_6 _IDENT_
   49            | _SYMB_7 _IDENT_
   50            | _SYMB_9 Expression10
   51            | _SYMB_10 Expression10
   52            | _SYMB_11 Expression10
   53            | Expression10

   54 Expression8: Expression8 _SYMB_12 Expression9
   55            | Expression8 _SYMB_13 Expression9
   56            | Expression8 _SYMB_14 Expression9
   57            | Expression9

   58 Expression7: Expression7 _SYMB_11 Expression8
   59            | Expression7 _SYMB_9 Expression8
   60            | Expression8

   61 Expression6: Expression6 _SYMB_15 Expression7
   62            | Expression6 _SYMB_16 Expression7
   63            | Expression7

   64 Expression5: Expression6 _SYMB_17 Expression6
   65            | Expression6 _SYMB_18 Expression6
   66            | Expression6 _SYMB_19 Expression6
   67            | Expression6 _SYMB_20 Expression6
   68            | Expression6

   69 Expression4: Expression5 _SYMB_21 Expression5
   70            | Expression5 _SYMB_22 Expression5
   71            | Expression5

   72 Expression3: Expression3 _SYMB_23 Expression4
   73            | Expression3 _SYMB_24 Expression4
   74            | Expression3 _SYMB_25 Expression4
   75            | Expression4

   76 Expression2: Expression3 _SYMB_26 Expression3
   77            | Expression3 _SYMB_27 Expression3
   78            | Expression3 _SYMB_28 Expression3
   79            | Expression3

   80 Expression1: Expression2 _SYMB_29 Expression2 _SYMB_30 Expression2
   81            | Expression2

   82 Expression: _IDENT_ _SYMB_31 Expression
   83           | _IDENT_ _SYMB_32 Expression
   84           | _IDENT_ _SYMB_33 Expression
   85           | _IDENT_ _SYMB_34 Expression
   86           | _IDENT_ _SYMB_35 Expression
   87           | _IDENT_ _SYMB_36 Expression
   88           | _IDENT_ _SYMB_37 Expression
   89           | _IDENT_ _SYMB_38 Expression
   90           | _IDENT_ _SYMB_39 Expression
   91           | _IDENT_ _SYMB_40 Expression
   92           | _IDENT_ _SYMB_41 Expression
   93           | Expression1

   94 ListExpression: Expression
   95               | Expression _SYMB_4 ListExpression


Terminals, with rules where they appear

$end (0) 0
error (256)
_ERROR_ (258)
_SYMB_0 (259) 4 17 18 19 20 21 28 29 30 33 34 35 36 37 38 39 40 41
    42 43 44 45
_SYMB_1 (260) 4 17 18 19 20 21 28 29 30 33 34 35 36 37 38 39 40 41
    42 43 44 45
_SYMB_2 (261) 4 15 17 18 19 20 21
_SYMB_3 (262) 4 15 17 18 19 20 21
_SYMB_4 (263) 13 34 43 95
_SYMB_5 (264) 14 16 21 22 23
_SYMB_6 (265) 31 48
_SYMB_7 (266) 32 49
_SYMB_8 (267) 47
_SYMB_9 (268) 50 59
_SYMB_10 (269) 51
_SYMB_11 (270) 52 58
_SYMB_12 (271) 54
_SYMB_13 (272) 55
_SYMB_14 (273) 56
_SYMB_15 (274) 61
_SYMB_16 (275) 62
_SYMB_17 (276) 64
_SYMB_18 (277) 65
_SYMB_19 (278) 66
_SYMB_20 (279) 67
_SYMB_21 (280) 69
_SYMB_22 (281) 70
_SYMB_23 (282) 72
_SYMB_24 (283) 73
_SYMB_25 (284) 74
_SYMB_26 (285) 76
_SYMB_27 (286) 77
_SYMB_28 (287) 78
_SYMB_29 (288) 80
_SYMB_30 (289) 80
_SYMB_31 (290) 82
_SYMB_32 (291) 83
_SYMB_33 (292) 84
_SYMB_34 (293) 85
_SYMB_35 (294) 86
_SYMB_36 (295) 87
_SYMB_37 (296) 88
_SYMB_38 (297) 89
_SYMB_39 (298) 90
_SYMB_40 (299) 91
_SYMB_41 (300) 92
_SYMB_42 (301) 33
_SYMB_43 (302) 45
_SYMB_44 (303) 44
_SYMB_45 (304) 42
_SYMB_46 (305) 43
_SYMB_47 (306) 22
_SYMB_48 (307) 23
_SYMB_49 (308) 40
_SYMB_50 (309) 18
_SYMB_51 (310) 36
_SYMB_52 (311) 21
_SYMB_53 (312) 17 18
_SYMB_54 (313) 37
_SYMB_55 (314) 38
_SYMB_56 (315) 27
_SYMB_57 (316) 34
_SYMB_58 (317) 16
_SYMB_59 (318) 39
_SYMB_60 (319) 35
_SYMB_61 (320) 41
_SYMB_62 (321) 20
_SYMB_63 (322) 19
_INTEGER_ (323) 25
_DOUBLE_ (324) 24
_IDENT_ (325) 4 5 26 29 30 31 32 48 49 82 83 84 85 86 87 88 89 90 91
    92


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
Program (72)
    on left: 1, on right: 0
Block (73)
    on left: 2 3, on right: 7
Function (74)
    on left: 4, on right: 8 9
Parameter (75)
    on left: 5, on right: 12 13
ListBlock (76)
    on left: 6 7, on right: 1 4 7
ListFunction (77)
    on left: 8 9, on right: 2 9
ListStatement (78)
    on left: 10 11, on right: 3 11 15 17 18 19 20 21
ListParameter (79)
    on left: 12 13, on right: 4 13
Statement (80)
    on left: 14 15 16 17 18 19 20 21 22 23, on right: 10 11
Expression11 (81)
    on left: 24 25 26 27 28, on right: 46
Expression10 (82)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
   , on right: 47 50 51 52 53
Expression9 (83)
    on left: 47 48 49 50 51 52 53, on right: 54 55 56 57
Expression8 (84)
    on left: 54 55 56 57, on right: 54 55 56 58 59 60
Expression7 (85)
    on left: 58 59 60, on right: 58 59 61 62 63
Expression6 (86)
    on left: 61 62 63, on right: 61 62 64 65 66 67 68
Expression5 (87)
    on left: 64 65 66 67 68, on right: 69 70 71
Expression4 (88)
    on left: 69 70 71, on right: 72 73 74 75
Expression3 (89)
    on left: 72 73 74 75, on right: 72 73 74 76 77 78 79
Expression2 (90)
    on left: 76 77 78 79, on right: 80 81
Expression1 (91)
    on left: 80 81, on right: 93
Expression (92)
    on left: 82 83 84 85 86 87 88 89 90 91 92 93, on right: 14 16 17
    18 19 20 21 28 33 34 35 36 37 38 39 40 41 42 43 44 45 82 83 84
    85 86 87 88 89 90 91 92 94 95
ListExpression (93)
    on left: 94 95, on right: 21 30 95


state 0

    0 $accept: . Program $end

    $default  reduce using rule 6 (ListBlock)

    Program    go to state 1
    ListBlock  go to state 2


state 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


state 2

    1 Program: ListBlock .
    7 ListBlock: ListBlock . Block

    _SYMB_0    shift, and go to state 4
    _SYMB_2    shift, and go to state 5
    _SYMB_6    shift, and go to state 6
    _SYMB_7    shift, and go to state 7
    _SYMB_8    shift, and go to state 8
    _SYMB_9    shift, and go to state 9
    _SYMB_10   shift, and go to state 10
    _SYMB_11   shift, and go to state 11
    _SYMB_42   shift, and go to state 12
    _SYMB_43   shift, and go to state 13
    _SYMB_44   shift, and go to state 14
    _SYMB_45   shift, and go to state 15
    _SYMB_46   shift, and go to state 16
    _SYMB_47   shift, and go to state 17
    _SYMB_48   shift, and go to state 18
    _SYMB_49   shift, and go to state 19
    _SYMB_51   shift, and go to state 20
    _SYMB_52   shift, and go to state 21
    _SYMB_53   shift, and go to state 22
    _SYMB_54   shift, and go to state 23
    _SYMB_55   shift, and go to state 24
    _SYMB_56   shift, and go to state 25
    _SYMB_57   shift, and go to state 26
    _SYMB_58   shift, and go to state 27
    _SYMB_59   shift, and go to state 28
    _SYMB_60   shift, and go to state 29
    _SYMB_61   shift, and go to state 30
    _SYMB_62   shift, and go to state 31
    _SYMB_63   shift, and go to state 32
    _INTEGER_  shift, and go to state 33
    _DOUBLE_   shift, and go to state 34
    _IDENT_    shift, and go to state 35

    $default  reduce using rule 1 (Program)

    Block          go to state 36
    Function       go to state 37
    ListFunction   go to state 38
    ListStatement  go to state 39
    Statement      go to state 40
    Expression11   go to state 41
    Expression10   go to state 42
    Expression9    go to state 43
    Expression8    go to state 44
    Expression7    go to state 45
    Expression6    go to state 46
    Expression5    go to state 47
    Expression4    go to state 48
    Expression3    go to state 49
    Expression2    go to state 50
    Expression1    go to state 51
    Expression     go to state 52


state 3

    0 $accept: Program $end .

    $default  accept


state 4

   28 Expression11: _SYMB_0 . Expression _SYMB_1

    _SYMB_0    shift, and go to state 4
    _SYMB_6    shift, and go to state 6
    _SYMB_7    shift, and go to state 7
    _SYMB_8    shift, and go to state 8
    _SYMB_9    shift, and go to state 9
    _SYMB_10   shift, and go to state 10
    _SYMB_11   shift, and go to state 11
    _SYMB_42   shift, and go to state 12
    _SYMB_43   shift, and go to state 13
    _SYMB_44   shift, and go to state 14
    _SYMB_45   shift, and go to state 15
    _SYMB_46   shift, and go to state 16
    _SYMB_49   shift, and go to state 19
    _SYMB_51   shift, and go to state 20
    _SYMB_54   shift, and go to state 23
    _SYMB_55   shift, and go to state 24
    _SYMB_56   shift, and go to state 25
    _SYMB_57   shift, and go to state 26
    _SYMB_59   shift, and go to state 28
    _SYMB_60   shift, and go to state 29
    _SYMB_61   shift, and go to state 30
    _INTEGER_  shift, and go to state 33
    _DOUBLE_   shift, and go to state 34
    _IDENT_    shift, and go to state 53

    Expression11  go to state 41
    Expression10  go to state 42
    Expression9   go to state 43
    Expression8   go to state 44
    Expression7   go to state 45
    Expression6   go to state 46
    Expression5   go to state 47
    Expression4   go to state 48
    Expression3   go to state 49
    Expression2   go to state 50
    Expression1   go to state 51
    Expression    go to state 54


state 5

   15 Statement: _SYMB_2 . ListStatement _SYMB_3

    _SYMB_0    shift, and go to state 4
    _SYMB_2    shift, and go to state 5
    _SYMB_6    shift, and go to state 6
    _SYMB_7    shift, and go to state 7
    _SYMB_8    shift, and go to state 8
    _SYMB_9    shift, and go to state 9
    _SYMB_10   shift, and go to state 10
    _SYMB_11   shift, and go to state 11
    _SYMB_42   shift, and go to state 12
    _SYMB_43   shift, and go to state 13
    _SYMB_44   shift, and go to state 14
    _SYMB_45   shift, and go to state 15
    _SYMB_46   shift, and go to state 16
    _SYMB_47   shift, and go to state 17
    _SYMB_48   shift, and go to state 18
    _SYMB_49   shift, and go to state 19
    _SYMB_51   shift, and go to state 20
    _SYMB_52   shift, and go to state 21
    _SYMB_53   shift, and go to state 22
    _SYMB_54   shift, and go to state 23
    _SYMB_55   shift, and go to state 24
    _SYMB_56   shift, and go to state 25
    _SYMB_57   shift, and go to state 26
    _SYMB_58   shift, and go to state 27
    _SYMB_59   shift, and go to state 28
    _SYMB_60   shift, and go to state 29
    _SYMB_61   shift, and go to state 30
    _SYMB_62   shift, and go to state 31
    _SYMB_63   shift, and go to state 32
    _INTEGER_  shift, and go to state 33
    _DOUBLE_   shift, and go to state 34
    _IDENT_    shift, and go to state 53

    ListStatement  go to state 55
    Statement      go to state 40
    Expression11   go to state 41
    Expression10   go to state 42
    Expression9    go to state 43
    Expression8    go to state 44
    Expression7    go to state 45
    Expression6    go to state 46
    Expression5    go to state 47
    Expression4    go to state 48
    Expression3    go to state 49
    Expression2    go to state 50
    Expression1    go to state 51
    Expression     go to state 52


state 6

   48 Expression9: _SYMB_6 . _IDENT_

    _IDENT_  shift, and go to state 56


state 7

   49 Expression9: _SYMB_7 . _IDENT_

    _IDENT_  shift, and go to state 57


state 8

   47 Expression9: _SYMB_8 . Expression10

    _SYMB_0    shift, and go to state 4
    _SYMB_42   shift, and go to state 12
    _SYMB_43   shift, and go to state 13
    _SYMB_44   shift, and go to state 14
    _SYMB_45   shift, and go to state 15
    _SYMB_46   shift, and go to state 16
    _SYMB_49   shift, and go to state 19
    _SYMB_51   shift, and go to state 20
    _SYMB_54   shift, and go to state 23
    _SYMB_55   shift, and go to state 24
    _SYMB_56   shift, and go to state 25
    _SYMB_57   shift, and go to state 26
    _SYMB_59   shift, and go to state 28
    _SYMB_60   shift, and go to state 29
    _SYMB_61   shift, and go to state 30
    _INTEGER_  shift, and go to state 33
    _DOUBLE_   shift, and go to state 34
    _IDENT_    shift, and go to state 58

    Expression11  go to state 41
    Expression10  go to state 59


state 9

   50 Expression9: _SYMB_9 . Expression10

    _SYMB_0    shift, and go to state 4
    _SYMB_42   shift, and go to state 12
    _SYMB_43   shift, and go to state 13
    _SYMB_44   shift, and go to state 14
    _SYMB_45   shift, and go to state 15
    _SYMB_46   shift, and go to state 16
    _SYMB_49   shift, and go to state 19
    _SYMB_51   shift, and go to state 20
    _SYMB_54   shift, and go to state 23
    _SYMB_55   shift, and go to state 24
    _SYMB_56   shift, and go to state 25
    _SYMB_57   shift, and go to state 26
    _SYMB_59   shift, and go to state 28
    _SYMB_60   shift, and go to state 29
    _SYMB_61   shift, and go to state 30
    _INTEGER_  shift, and go to state 33
    _DOUBLE_   shift, and go to state 34
    _IDENT_    shift, and go to state 58

    Expression11  go to state 41
    Expression10  go to state 60


state 10

   51 Expression9: _SYMB_10 . Expression10

    _SYMB_0    shift, and go to state 4
